some alignment and title fixes

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
 }
 
 .pageCard{
-  max-width: 1300px;
+  max-width: 1500px;
   margin: 0 auto;
   padding: 18px 18px 22px 18px;
 }
